<resources>
    <string name="app_name">Quiz</string>
    <string name="action_settings">Settings</string>

    <string name="tv_welcome">Welcome to the Quiz Maker. Please create a question before stating the quiz.</string>
    <string name="bt_create_quiz">Create quiz</string>
    <string name="bt_start_quiz">Start quiz</string>
    <string name="tv_create_quiz_here">Create your quiz here</string>
    <string name="et_question">Question</string>
    <string name="et_answer">Answer</string>
    <string name="bt_create">Create</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tv_question_1">How many hours should you game a day?</string>
    <string name="et_answer_of_question_1">Answer</string>
    <string name="bt_confirm_answer">Confirm answer</string>

    <string name="successfully_created_quiz">Quiz was successfully created!</string>
</resources>